@@ -45,6 +45,11 @@ void		meta_comp_window_shrink (MetaCompWindow *comp_window,
 					 MetaEffect *effect);
 void		meta_comp_window_unshrink (MetaCompWindow *comp_window,
 					   MetaEffect *effect);
+void		meta_comp_window_restack (MetaCompWindow *comp_window,
+					  MetaCompWindow *above);
+void		meta_comp_window_freeze_stack (MetaCompWindow *comp_window);
+void		meta_comp_window_thaw_stack (MetaCompWindow *comp_window);
+gboolean	meta_comp_window_stack_frozen (MetaCompWindow *comp_window);
 
 #if 0
 void		meta_comp_window_set_explode (MetaCompWindow *comp_window,
